# snazzy

./: Cargo.toml  build.rs
src/: items.proto  items.textproto  main.rs
src/proto/: common.proto  mod.rs
